<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="15dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Now_Playing"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="20sp"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/thumbnail"
        android:layout_width="@dimen/ThumbnailSize"
        android:layout_height="@dimen/ThumbnailSize"
        android:background="@drawable/shape_gradient"
        android:elevation="30dp"
        android:contentDescription="@string/currentSongThumbnail_CD"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/playerControls"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <SeekBar
        android:id="@+id/progress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:progress="50"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/playerControls"/>

    <TextView
        android:id="@+id/currentDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/duration_template"
        android:textColor="@android:color/tertiary_text_light"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress"/>

    <TextView
        android:id="@+id/totalDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:text="@string/duration_template"
        android:textColor="@android:color/tertiary_text_light"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress"/>

    <LinearLayout
        android:id="@+id/playerControls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/shuffle"
            android:layout_width="@dimen/buttonSizeSmall"
            android:layout_height="@dimen/buttonSizeSmall"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/Shuffle_CD"
            android:tint="@android:color/darker_gray"
            android:src="@drawable/ic_shuffle"
            android:scaleType="fitCenter"/>

        <ImageButton
            android:id="@+id/skipToPrevious"
            android:layout_width="@dimen/buttonSizeMedium"
            android:layout_height="@dimen/buttonSizeMedium"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/SkipToPrevious_CD"
            android:tint="@android:color/darker_gray"
            android:src="@drawable/ic_previous"
            android:scaleType="fitCenter"/>

        <ImageButton
            android:id="@+id/play"
            android:layout_width="@dimen/buttonSizeLarge"
            android:layout_height="@dimen/buttonSizeLarge"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/Play_CD"
            android:src="@drawable/ic_play_accent"
            android:scaleType="fitCenter"/>

        <ImageButton
            android:id="@+id/skipToNext"
            android:layout_width="@dimen/buttonSizeMedium"
            android:layout_height="@dimen/buttonSizeMedium"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/SkipToNext_CD"
            android:tint="@android:color/darker_gray"
            android:src="@drawable/ic_next"
            android:scaleType="fitCenter"/>

        <ImageButton
            android:id="@+id/repeat"
            android:layout_width="@dimen/buttonSizeSmall"
            android:layout_height="@dimen/buttonSizeSmall"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/Repeat_CD"
            android:tint="@android:color/darker_gray"
            android:src="@drawable/ic_repeat"
            android:scaleType="fitCenter"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>